[tool.poetry]
name = "r2d2"
version = "0.1.0"
description = ""
authors = ["Ethan Brooks", "Logan Walls <2934282+LoganWalls@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numba = "^0.55.1"
opencv-python = "^4.5.5"
pybullet = "^3.2.1"
transformers = "^4.16.2"
ray = "^1.10.0"
typed-argument-parser = "^1.7.2"
ansicolors = "^1.1.8"
art = "^5.4"
torch = "^1.10.2"
gym = {extras = ["accept-rom-license", "atari"], version = "^0.21.0"}


[tool.poetry.dev-dependencies]
ipython = "^7.25.0"
ipdb = "^0.13.9"
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
